objects/ARF__c.object
<CustomObject>
    <fields>
        <fullName>ACES__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANA5000EligibleEmployees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ANA - 5,000+ eligible employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountExecutive__c</fullName>
        <formula>Account__r.Account_Executive__r.FirstName&amp;&quot; &quot;&amp;Account__r.Account_Executive__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountManager__c</fullName>
        <formula>Account__r.Account_Manager__r.FirstName&amp;&quot; &quot;&amp;Account__r.Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountServiceRep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Service Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>BW 2016</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ARFs</relationshipLabel>
        <relationshipName>ARFs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcoCaOnlyMedical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACO (CA ONLY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnthemAlegeusWGSOnlyFSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anthem/Alegeus (WGS ONLY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnthemHealthGuidestandAlone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anthem Health Guide (standalone)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnthemHealthLink__c</fullName>
        <label>Anthem/HealthLink</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Anthem UM/CM</fullName>
                </value>
                <value>
                    <fullName>HealthLink UM/CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnthemHealthRewards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anthem Health Rewards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnyPerformanceGuaranteesInForce__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Do we have performance guarantees in-force?</inlineHelpText>
        <label>Any  performance guarantees in-force?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BasicLifeAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basic Life/AD&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BehavioralHealthRePricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavioral Health Re-Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BehavioralHealthResource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavioral Health Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BehavioralHealthStdMedMgmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavioral Health (Std Med Mgmt.)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BehavioralHealth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavioral Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlueCardPPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BlueCard PPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BluePriorityWIOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blue Priority (WI ONLY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BluePriorityWiNyOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blue Priority (WI, NY ONLY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlueViewVision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blue View Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlueView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BlueView</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDHP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CDHP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHIPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHIPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA:</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONEXIS1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CONEXIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CONEXIS2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CONEXIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CONEXIS3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CONEXIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS90__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CS90</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaSDI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CA SDI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaSelectPPO1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CA - Select PPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaSelectPPO2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CA - Select PPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseStatus__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Renew + New</fullName>
                </value>
                <value>
                    <fullName>Expansion (No Renewal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CastlightElevate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Castlight Elevate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CastlightEngage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Castlight Engage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CastlightStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Castlight Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CdtCodeAnalysisDental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDT Code Analysis (Dental)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CedeApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cede Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CityandState__c</fullName>
        <formula>Account__r.BillingCity &amp;&quot;, &quot;&amp;Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City and State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientHeadquarters__c</fullName>
        <formula>TEXT(Account__r.HQ_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Headquarters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <formula>Account__r.Account_Name_DBA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commercial</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commissions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompassLDOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compass (L&amp;D Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompleteGRID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete/GRID+</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ComplexCare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ComplexCare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConditionCareCore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConditionCare (Core)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConditionCareSupport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConditionCare Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsultantBrokerageFirm__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant/Brokerage Firm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsultantName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultant Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required for National GeoAccess and Disruption Analysis reporting</inlineHelpText>
        <label>Cost Center:</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CptDiscountAnalysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPT/Discount Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomBlendedAnalysisNeeded__c</fullName>
        <description>If you’ve selected any AltNets, do you need a custom blended analysis or standalone reports?</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you’ve selected any AltNets, do you need a custom blended analysis or standalone reports? 
*Additional reports may incur additional cost from outside vendors.</inlineHelpText>
        <label>Custom blended analysis needed?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomGeoAcccessParameters__c</fullName>
        <formula>IF( 
AND( 
AND(  UseStandardDentalAccess__c=FALSE, 
 UseStandardEapAccess__c=FALSE, 
 UseStandardMedicalAccess__c=FALSE, 
 UseStandardPharmacyAccess__c=FALSE, 
 UseStandardVisionAccess__c=FALSE, 
 UseUSRPharmacyAccess__c=FALSE)
  
, 
(OfGeoaccess__c=0) 
), 
( &quot;Not Complete&quot;) 
, 
( &quot;Complete&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom GeoAcccess Parameters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerServiceCenterLocation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Service Center Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DcBlueChoice1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DC - BlueChoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DcBlueChoice2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DC - BlueChoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeliveryMethodInstructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Method/Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DentalBlue100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Blue 100 (IN, OH, KY, MO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentalBlue200__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Blue 200 (IN, OH, KY, MO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentalBlue300__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Blue 300 (IN, OH, KY, MO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentalBlueComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Blue Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentalDisruptionAnalysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Disruption Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentalHmoCaWiOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental HMO (CA &amp; WI ONLY)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentalIncumbent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Incumbent</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DentalIndemnityInOhWi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Indemnity (IN, OH, WI)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentalPPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental PPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentalPp0DeCareComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental PPO DeCare Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentalPpoDeCarePrime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental PPO DeCare Prime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentalRePricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Re-Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <label>Dental</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DentecarePrimaryWiCa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dentecare Primary (WI &amp; CA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DentecareStandardWiCa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dentecare Standard (WI &amp; CA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DirectBill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoTheyHaveSpecialAdhocReports__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Do they have special ad-hoc reports?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DoWeHaveAnyIssuesWithThisClient__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Do we have any issues with this client?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DoesRequestIncludeHealthWellness__c</fullName>
        <label>Does request include Health&amp;Wellness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoesRequestIncludeLifeDisability__c</fullName>
        <label>Does request include Life Disability?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DueToConsultantBroker__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due to Consultant/Broker</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAPMedical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAPMedical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EGRIncumbent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EGR Incumbent:</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EGRRequest__c</fullName>
        <label>EGR Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EGRSalesAccountMgr__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you checked an EGR product(s) above, please ALSO indicate the following</inlineHelpText>
        <label>EGR Sales/Account Mgr:</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ElectronicCopies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Copies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpenseTypePpoCdhp__c</fullName>
        <label>Expense Type PPO CDHP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HIA</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>HSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpenseType__c</fullName>
        <label>Expense Type:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>HIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA:</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlNetworkBlue1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FL - NetworkBlue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlNetworkBlue2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FL - NetworkBlue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FmlaAbsenceMgmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FMLA/Absence Mgmt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FundingTypeADD__c</fullName>
        <label>Funding Type ADD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeBasicLife__c</fullName>
        <label>Funding Type Basic Life</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeBluePriority__c</fullName>
        <label>Funding Type Blue Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeBlueView__c</fullName>
        <label>Funding Type Blue View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeCASDI__c</fullName>
        <label>Funding Type CASDI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeDeCareComplete__c</fullName>
        <label>Funding Type DeCare Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeDentalHMO__c</fullName>
        <label>Funding Type Dental HMO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeDentalPPO__c</fullName>
        <label>Funding Type Dental PPO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeEPO__c</fullName>
        <label>Funding Type EPO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeFMLA__c</fullName>
        <label>Funding Type FMLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeHMOSlice__c</fullName>
        <label>Funding Type HMOSlice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeHMO__c</fullName>
        <label>Funding Type HMO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeIndemnity__c</fullName>
        <label>Funding Type Indemnity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeLTD__c</fullName>
        <label>Funding Type LTD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeMSG__c</fullName>
        <label>Funding Type MSG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeOptLife__c</fullName>
        <label>Funding Type OptLife</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypePOSCDHPWIOnly__c</fullName>
        <label>Funding Type POSCDHPWIOnly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypePOS__c</fullName>
        <label>Funding Type POS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypePPOCDHP__c</fullName>
        <label>Funding Type PPO CDHP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypePPODecare__c</fullName>
        <label>Funding Type PPO Decare</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypePPO__c</fullName>
        <label>Funding Type PPO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypePharma__c</fullName>
        <label>Funding Type Pharma</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingTypeProdSol__c</fullName>
        <label>Funding Type ProdSol</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>